# extract_data_from_pdf

./: pyproject.toml
extract_data_from_pdf/: main.ipynb
