[tool.poetry]
name = "extract-data-from-pdf"
version = "0.1.0"
description = ""
authors = ["Anh Dung Pham <dungpham290198@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.3.6"
langchain-community = "^0.3.17"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
